# Vera

./: .gitignore  CMakeLists.txt  laser.cpp  laser.h  main.cpp  types.h
